fixed overflow height issues on fullsizedbackgrounds

--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ body {
 #header {
   background: url("../img/bg5.jpg") top no-repeat fixed;
   width: 100%;
-  height: 60%;
+  height: 65%;
   background-size: cover;
   font-family: 'Montserrat', sans-serif;
   font-weight: 700;
